great-nice-application/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/healthcheck-path: /health  # Health check path
spec:
  rules:
  - host: nice.services.deepinstinctweb.com
    http:
      paths:
      - path: /nice
        pathType: Prefix
        backend:
          service:
            name: nice-clusterip
            port:
              number: 80
      - path: /great
        pathType: Prefix
        backend:
          service:
            name: great-clusterip
            port:
              number: 80
  tls:
  - hosts:
    - nice.services.deepinstinctweb.com
    secretName: tls-secret
